refactor: remove unused imports across multiple classes